Replaced 'Rechteck.obj.model' with 'border.fus'

--- a/src/Engine/Examples/LevelTest/LevelTest.csproj
+++ b/src/Engine/Examples/LevelTest/LevelTest.csproj
@@ -188,6 +188,9 @@
     <None Include="Assets\assets_split.fus">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="Assets\border.fus">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="Assets\Island_split.fus">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
