Physic works in simple island scene, To Do: minimize tree collider

--- a/src/Engine/Examples/LevelTestPhysics/LevelTestPhysics.csproj
+++ b/src/Engine/Examples/LevelTestPhysics/LevelTestPhysics.csproj
@@ -206,6 +206,12 @@
     <None Include="Assets\Island_split1.fus">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="Assets\Island_wAssets.fus">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Assets\Island_wAssets_woScale.fus">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="Assets\NEW_ISLAND.fus">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
