Physic with LevelTest scene - problem: positioning island_end

--- a/src/Engine/Examples/LevelTestPhysics/LevelTestPhysics.csproj
+++ b/src/Engine/Examples/LevelTestPhysics/LevelTestPhysics.csproj
@@ -200,6 +200,12 @@
     <None Include="Assets\Island.fus">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="Assets\Island_resized.fus">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Assets\Island_resized_woTexture.fus">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="Assets\Island_split.fus">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -245,6 +251,7 @@
     <None Include="Assets\SphereB.fus">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="Assets\Way.fus" />
     <None Include="Assets\way.obj.model">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
