--- a/src/Engine/Examples/LevelTest/LevelTest.csproj
+++ b/src/Engine/Examples/LevelTest/LevelTest.csproj
@@ -192,6 +192,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="Assets\border1.fus" />
+    <None Include="Assets\border1.obj.model" />
     <None Include="Assets\Island_split.fus">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
